force-app/main/default/objects/Bingo_Mark__c/Bingo_Mark__c.object-meta.xml
<CustomObject>
    <description>Append-only log of square marks. Guest users can INSERT but never UPDATE (System.TypeException: DML operation UPDATE not allowed), so marking and un-marking are both inserts and current state is the latest row per cell. Deliberately has NO lookup fields: a guest cannot reference a parent record it lacks access to.</description>
    <label>Bingo Mark</label>
    <nameField><displayFormat>BM-{000000}</displayFormat><label>Mark Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Bingo Marks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>