force-app/main/default/objects/Bingo_Mark__c/fields/Cleared__c.field-meta.xml
<CustomField>
    <fullName>Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An un-mark. Inserted rather than deleting the original row, because guests cannot update or delete.</description>
    <label>Cleared</label>
    <type>Checkbox</type>
</CustomField>