force-app/main/default/objects/Bingo_Mark__c/fields/Col__c.field-meta.xml
<CustomField>
    <fullName>Col__c</fullName>
    <description>Zero-based grid Col (0-4).</description>
    <label>Col</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>