force-app/main/default/objects/Bingo_Mark__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Lowercased player email. A plain text key rather than a lookup, so the insert needs no cross-reference access.</description>
    <externalId>true</externalId>
    <label>Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>