force-app/main/default/objects/Bingo_Mark__c/fields/Met_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Met_Person_Name__c</fullName>
    <description>Who the player met. The networking proof, and the post-event report.</description>
    <label>Met Person Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>