force-app/main/default/objects/Bingo_Mark__c/fields/Met_Player_Email__c.field-meta.xml
<CustomField>
    <fullName>Met_Player_Email__c</fullName>
    <description>Email of the registered player who was met. The attribution key for helper points — display names are ambiguous, two Rafas would otherwise share credit. Never returned to the client.</description>
    <label>Met Player Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>