force-app/main/default/objects/Bingo_Mark__c/fields/Prompt_Text__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Text__c</fullName>
    <description>Snapshot of the prompt this mark satisfied, for reporting without re-deriving the layout.</description>
    <label>Prompt Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>