force-app/main/default/objects/Bingo_Mark__c/fields/Row__c.field-meta.xml
<CustomField>
    <fullName>Row__c</fullName>
    <description>Zero-based grid Row (0-4).</description>
    <label>Row</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>